revisione sezione WP, aggiunti nomi responsabili

--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -1,5 +1,4 @@
-La Work BreakDown Structure, d'ora in poi WBS, rappresenta l'insieme delle attivit\`{a} necessarie a svolgere un compito ben preciso o un processo. Le singole attivit\`{a} prendono il nome di Work Package, WP, e definiscono dettagliatamente le azioni da svolgere per
-ciascuna di esse.\\
+La Work BreakDown Structure, d'ora in poi WBS, rappresenta l'insieme delle attivit\`{a} necessarie a svolgere un compito ben preciso o un processo. Le singole attivit\`{a} prendono il nome di Work Package, WP, e definiscono dettagliatamente le azioni da svolgere per ciascuna di esse.\\
 La WBS \`{e} costituita da una struttura ad albero di WP che, a partire dell'obiettivo finale del progetto, specifica per suddivisioni successive i singoli sotto-obiettivi, fino all'unit\`{a} minima di attivit\`{a}.\\
 Tale scomposizione in tanti compiti di dimensioni limitate facilita la gestione, il controllo e l'assegnazione delle singole attivit\`{a}, consentendo una migliore suddivisione del lavoro.\\
 Grazie alla WBS il project manager pu\`{o}, in maniera semplificata, organizzare tutte le attivit\`{a} che compongono il progetto, cos\`{i} come i WP, ed avere sempre a disposizione un utile strumento che definisce tutti i passi necessari alla buona realizzazione del progetto.\\
@@ -14,7 +13,7 @@ La WBS, inoltre, risulta essere la base per tutte le altre attivit\`{a} di piani
 
 \subsubsection{WBS-Primo Livello}
 \paragraph{Definizione Concept (1.1)}
-\`{e} la prima fase del progetto, dove si raccolgono le idee per portare alla nascita e alla definizione del progetto.\\
+\`{E} la prima fase del progetto, dove si raccolgono le idee che portano alla nascita e alla definizione del progetto.\\
 A partire da questo momento in poi si penser\`{a} alla forma che assumer\`{a} il prodotto finale, alla  definizione delle caratteristiche pi\`{u} importanti (target del prodotto, come si intende erogare il servizio) e alla definizione delle funzionalit\`{a} principali che il prodotto finale deve avere.
 
 \paragraph{Studio Fattibilit\`{a} (1.2)}
@@ -47,8 +46,7 @@ In questa fase \`{e} prevista la realizzazione di documentazione a supporto dell
 Questa fase \`{e} stata pianificata al fine di definire come la societ\`{a} intende promuovere il proprio prodotto, ricercare eventuali partnership.
 
 \subsubsection {WBS-Secondo livello}
-Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il seguente schema in quanto,
-, rappresentano tutti insiemi di attivit\`{a} elementari da realizzare:
+Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il seguente schema, in quanto rappresentano tutti insiemi di attivit\`{a} elementari da realizzare:
 \begin{description}
 \item[Descrizione:] descrizione generica su ci\`{o} che il WP si propone di fare.
 \item[Responsabile:] persona che ha la responsabilit\`{a} delle attivit\`{a} da svolgere nel WP e dell'output finale.
@@ -62,7 +60,7 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 \paragraph{Specifiche di massima (1.1.1)}
 \begin{description}
 \item[Descrizione:] Definizione delle prime specifiche del prodotto per individuare i requisiti ad alto livello necessari a sviluppare l'abstract.
-\item[Responsabile:]
+\item[Responsabile:] Analista, Analista Competitor, Project Manager
 \item[Input:] idee, critiche e specifiche provenienti da un brainstorming di gruppo.
 \item[Output:] documento formale che descrive una prima versione della specifica del prodotto, nella quale si definisce dettagliatamente l'idea che si vuole realizzare.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -81,7 +79,7 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 \paragraph{Definizione delle funzionalit\`{a} d'uso (1.1.2)}
 \begin{description}
 \item[Descrizione:] definizione dettagliata delle pi\`{u} importanti funzionalit\`{a} che si vuole siano presenti all'interno del software.
-\item[Responsabile:]
+\item[Responsabile:] Analista, Analista Competitor, Project Manager, Ricercatore di Innovazioni
 \item[Input:] documento di specifiche di massima prodotto dal WP.
 \item[Output:] documento che descrive nel dettaglio le funzionalità base che si è deciso di sviluppare.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -100,7 +98,7 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 \paragraph{Analisi delle nuove tecnologie (1.1.3)}
 \begin{description}
 \item[Descrizione:] ricerca mirata di eventuali innovazioni tecnologie presenti nel mercato che possano risultare utili allo sviluppo del software.
-\item[Responsabile:]
+\item[Responsabile:] Ricercatore di Innovazione, Responsabile Ricerca, Project Manager
 \item[Input:] documento di specifiche di funzionalit\`{a} prodotto dal WP.
 \item[Output:] documento che descrive nel dettaglio eventuali nuove tecnologie interessanti che potrebbero essere inserite nel progetto. Per ciascuna di queste viene riportata una stima di tempo che si presuppone sia necessario ai programmatori per arrivare ad averne una buona padronanza.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -119,7 +117,7 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 \paragraph{Fattibilit\`{a} tecnica (1.2.1)}
 \begin{description}
 \item[Descrizione:] fase di valutazione del prodotto che si vuole realizzare dal punto di vista tecnico-tecnologico.
-\item[Responsabile:] 
+\item[Responsabile:] Analista, Progettista, Project Manager
 \item[Input:] tutti i documenti prodotti dal secondo livello del WP.
 \item[Output:] documento che descrive nel dettaglio, in modo non ambiguo, la fattibilità tecnica per il prodotto che si vuole realizzare indicando le tecnologie e gli strumenti necessari per farlo.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -140,7 +138,7 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 \paragraph{Fattibilit\`{a} marketing (1.2.2)}
 \begin{description}
 \item[Descrizione:] fase di analisi del mercato per studiare la concorrenza dovuta ad idee similari. Seguono quindi una stima ed una analisi della redditivit\`{a} del prodotto e alle indicazioni preliminari su come pubblicizzarlo e rilasciarlo al fine di ottenere maggiori introiti dalla vendita.
-\item[Responsabile:] 
+\item[Responsabile:] Responsabile Marketing, Ricercatore di Mercato, Project Manager
 \item[Input:] ricerche di mercato e dati riguardanti eventuali competitor.
 \item[Output:] documento formale che indica la fattibilità dal punto di vista del marketing. Nel caso di una buona riuscita sono riportate anche le azioni da seguire per il rilascio del prodotto.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -153,14 +151,14 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 	\item formalizzazione documento;
 	\item approvazione;
 	\end{itemize}
-
 \item[Costo:] 319 \euro{}
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
+
 \paragraph{Fattibilit\`{a} legale (1.2.3)}
 \begin{description}
 \item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto legale. Si studiano e si definiscono le strategie eventuali da adottare in difesa del progetto. Si verifica inoltre la possibilit\`{a} di brevettare il prodotto e di registrare un marchio. Infine si verifica che lo sviluppo non porti alla violazione di alcuna legge o normativa in vigore.
-\item[Responsabile:]
+\item[Responsabile:] Responsabile Legale, Project Manager
 \item[Input:] conoscenza di eventuali prodotti simili nel mercato e normative/vincoli legali.
 \item[Output:] documento formale che indica la fattibilità dal punto di vista legale. Se viene prevista una buona riuscita allora sono riportate anche le azioni da seguire per il corretto rilascio del prodotto.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -172,14 +170,14 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 	\item formalizzazione documento;
 	\item approvazione;
 	\end{itemize}
-
 \item[Costo:] 315 \euro{}
 \item[Tempi di realizzazione:] 3 giorni lavorativi.
 \end{description}
+
 \paragraph{Fattibilit\`{a} Economica (1.2.4)}
 \begin{description}
 \item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto economico. Si studia e si valutano i benefici economici che tale progetto potrebbe portare. Vengono stimati inoltre i costi che l'organizzazione dovrebbe sostenere, diretti ed indiretti. Inoltre viene studiata la possibilit\`{a} di ottenere dei finanziamenti esterni 
-\item[Responsabile:] 
+\item[Responsabile:] Responsabile Finanziario, Commercialista, Project Manager
 \item[Input:] conoscenza dei costi diretti ed indiretti delle varie risorse.
 \item[Output:] documento formale che indica la fattibilità dal punto di vista economico. All'interno di questo verrà illustrata la previsione economica del prodotto, illustrando i possibili guadagni ed indicando l'eventuale punto di pareggio.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -199,7 +197,7 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 \paragraph{Pianificazione qualit\`{a} del prodotto (1.3.1)}
 \begin{description}
 \item[Descrizione:] fase di identificazione e definizione degli standard da seguire allo scopo di garantire qualit\`{a} al prodotto. Identificazione delle strategie di controllo da utilizzare per aggiungere qualit\`{a} al prodotto.
-\item[Responsabile:] 
+\item[Responsabile:] Responsabile Qualità, Project Manager
 \item[Input:] politiche e standard di qualità, esperienze passate degli analisti.
 \item[Output:] documenti formali, Piano di Qualifica e Norme di Progetto, che illustrano gli standard e le strategie da seguire per aggiungere qualità al prodotto.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -221,7 +219,7 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 \paragraph{Analisi dei rischi (1.3.2)}
 \begin{description}
 \item[Descrizione:] fase di analisi dei rischi riguardanti lo sviluppo del prodotto software. Si studia e si definiscono quali sono i rischi in cui si pu\`{o} incombere durante tutte la fasi di sviluppo, cos\`{i} da poterli evitare o quantomeno gestire.
-\item[Responsabile:] 
+\item[Responsabile:] Analista, Project Manager
 \item[Input:] esperienze personali, conoscenze di rischi noti e documenti prodotti all'interno del WP.
 \item[Output:] documento formale che indica gli eventuali rischi che si possono verificare durante le varie fasi di sviluppo del progetto.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -241,7 +239,7 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 \paragraph{Pianificazione del lavoro (1.3.3)}
 \begin{description}
 \item[Descrizione:] fase in cui viene definita la programmazione delle attivit\`{a} necessarie allo svolgimento del progetto.
-\item[Responsabile:] 
+\item[Responsabile:] Project Manager
 \item[Input:] esperienze personali, specifiche di massima, analisi di fattibilit\`{a}.
 \item[Output:] WBS,OBS,RBS, diagramma di Gantt.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -258,7 +256,7 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 \paragraph{Definizione dei casi d'uso (1.4.1)}
 \begin{description}
 \item[Descrizione:]fase di definizione finale delle funzionalit\`{a} del prodotto. Si determina in modo non ambiguo quali saranno le caratteristiche del software e come gli utenti potranno interagire con esso. Successivamente si effettua un'analisi dei rischi sul piano dello sviluppo del software, si studia e si definiscono quali sono i rischi nei quali si pu\`{o} incombere durante tutte la fasi di sviluppo, cos\`{i} da poterli evitare o quantomeno gestire.
-\item[Responsabile:] 
+\item[Responsabile:] Analista, Project Manager
 \item[Input: ]documentazione prodotta nei WP precedenti ed esperienza personale degli analisti.
 \item[Output:] documento formale che illustra chiaramente ed in modo formale le funzionalità definitive del prodotto finale e come sarà possibile per gli utenti interagire con esso.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -278,7 +276,7 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 \paragraph{Definizione dei requisiti (1.4.2)}
 \begin{description}
 \item[Descrizione:] fase non elementare, composta da altri WP di livello inferiore, allo scopo di definire i requisiti che il prodotto deve possedere e soddisfare.
-\item[Responsabile:] 
+\item[Responsabile:] Analista, Responsabile Tecnico, Project Manager
 \item[Input:] documentazione prodotta nei WP precedenti ed esperienza personale degli analisti.
 \item[Output:] documento formale ad uso esterno Analisi dei Requisiti.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -298,7 +296,7 @@ Per la descrizione dei Work Package di secondo livello verr\`{a} utilizzato il s
 \begin{description}
 \item[Descrizione:] fase in cui si procede con la definizione dell'architettura del prodotto utilizzando componenti con
 specifica chiara, coesa e nei principi di qualit\`{a} fissati a priori.
-\item[Responsabile:] 
+\item[Responsabile:] Progettista, Analista, Grafico, Responsabile Tecnico, Project Manager
 \item[Input:] analisi dei requisiti, sistemi aziendali ed eventualmente componenti esistenti.
 \item[Output:] documento di specifica tecnica del prodotto che riassume l'architettura generale ed ad
 alto livello del software.
@@ -318,7 +316,7 @@ alto livello del software.
 \paragraph{Progettazione di dettaglio (1.4.4)}
 \begin{description}
 \item[Descrizione:] fase in cui si procede con la definizionedelle unit\`{a} realizzative cio\`{e} moduli la cui complessit\`{a} deve essere ridotta al minimo indispensabile al fine di permettere la realizzazione del modulo al singolo programmatore.
-\item[Responsabile:] 
+\item[Responsabile:] Progettista, Grafico, Sviluppatore front-end, Project Manager
 \item[Input:] analisi dei requisiti, specifica tecnica.
 \item[Output:] documento di definizione del prodotto che descriva con linguaggio UML2.0 schemi e diagrammi di tutte le unità che devono essere realizzate.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -337,7 +335,7 @@ alto livello del software.
 \paragraph{Documentazione database (1.4.5)}
 \begin{description}
 \item[Descrizione:] stesura formale della documentazione relativa all'architettura riguardante il database.
-\item[Responsabile:] 
+\item[Responsabile:] Progettista, Project Manager
 \item[Input:] specifica tecnica, definizione di prodotto.
 \item[Output:] documento con scopo documentale della codifica del software.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -355,7 +353,7 @@ alto livello del software.
 \paragraph{Realizzazione database (1.5.1)}
 \begin{description}
 \item[Descrizione:] fase di sviluppo e codifica del database secondo quanto definito nella fase di progettazione.
-\item[Responsabile:] 
+\item[Responsabile:] Responsabile Sviluppo, sviluppatore back-end, Project Manager
 \item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto, Piano di Qualifica ed altra documentazione tecnica.
 \item[Output:]database realizzato e pienamente funzionante.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -373,7 +371,7 @@ alto livello del software.
 \paragraph{Realizzazione componenti (1.5.2)}
 \begin{description}
 \item[Descrizione:] fase di sviluppo e codifica delle componenti previste nella fase di progettazione comprensive sia dell'interfaccia grafica del prodotto, sia delle logica dell'applicativo.
-\item[Responsabile:] 
+\item[Responsabile:] Grafico, Sviluppatore front-end, Sviluppatore back-end, Responsabile Sviluppo, Analista, Progettista,
 \item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto, Piano di Qualifica ed altra documentazione tecnica.
 \item[Output:] codice dell'applicativo.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -391,7 +389,7 @@ alto livello del software.
 \paragraph{Test di unit\`{a} (1.6.1)}
 \begin{description}
 \item[Descrizione:] fase di test di tutte le singole unit\`{a} software prodotte.
-\item[Responsabile:] 
+\item[Responsabile:] Verificatore Software
 \item[Input:] metodi pianificati nell'architettura di dettaglio del prodotto.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -412,7 +410,7 @@ alto livello del software.
 \paragraph{Test di integrazione (1.6.2)}
 \begin{description}
 \item[Descrizione:] fase di test delle singole funzionalit\`{a} del prodotto, si tratta di una verifica in primis dei flussi di dati in entrata e in uscita tra le varie componenti realizzate e infine nella verifica dei flusso di controllo tra le componenti.
-\item[Responsabile:] 
+\item[Responsabile:] Verificatore Software
 \item[Input:] componenti pianificati nella specifica tecnica del prodotto (progettazione di alto livello).
 \item[Output:] documento riassuntivo dei risultati ottenuti dalla batteria di test realizzati.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -433,7 +431,7 @@ alto livello del software.
 \paragraph{Test di sistema (1.6.3)}  
 \begin{description}
 \item[Descrizione:] fase di test sulle interazioni fra le singole unit\`{a}. Si verifica che i comportamenti in seguito alle comunicazioni fra di queste siano quelli previsti. Queste fase ha lo scopo principale di effettuare un collaudo interno al fine di compiere eventuali correzioni onde evitare malfunzionamenti per il collaudo finale del prodotto.
-\item[Responsabile:] 
+\item[Responsabile:] Verificatore Software, Verificatore Usabilità, Project Manager
 \item[Input:] interfaccia grafica e Piano di Qualifica, documento riassuntivo test di unit\`{a}.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test di integrazione.
 \item[Tempi di realizzazione:] 2 giorni lavorativi.
@@ -442,7 +440,7 @@ alto livello del software.
 \paragraph{Collaudo finale (1.6.4)}
 \begin{description}
 \item[Descrizione:] fase di test dell'intero sistema da effettuare prima del rilascio. Si cercano eventuali errori o malfunzionamenti e successivamente si certifica che tutte le funzionalit\`{a} dichiarate siano presenti.
-\item[Responsabile:] 
+\item[Responsabile:] Responsabile Customer Care, Project Manager
 \item[Input:] interfaccia grafica, esito dei vari test, Piano di Qualifica e Analisi Dei Requisiti.
 \item[Output:] documento riassuntivo dei risultati ottenuti dai test e dal controllo dei requisiti.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -464,7 +462,7 @@ alto livello del software.
 \paragraph{Manuali Utente (1.7.1)}
 \begin{description}
 \item[Descrizione:] realizzazione dei manuali utente per il supporto all'utente all'uso dell'interfaccia. Il manuale illustra le funzionalit\`{a} del prodotto, il suo utilizzo e l'esposizione di problemi con le possibili soluzioni.
-\item[Responsabile:] 
+\item[Responsabile:] Responsabile Tecnico, Project Manager
 \item[Input:] interfaccia prodotto.
 \item[Output:] documento con lo scopo di fornire un supporto agli utenti dopo il rilascio.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -483,7 +481,7 @@ alto livello del software.
 \begin{description}
 \item[Descrizione:] fase che segue il rilascio del software: in questa fase bisogna prevedere
 possibili bug del prodotto e problemi che si possono verificare con i clienti e che dovranno essere risolti.
-\item[Responsabile:] 
+\item[Responsabile:] Analista, Progettista, Sviluppatore back-end, Sviluppatore front-end, Project Manager
 \item[Input:] problema riguardante il software.
 \item[Output:] rilascio nuova versione, relazioni sui problemi incontrati e sulle soluzioni,
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -499,7 +497,7 @@ possibili bug del prodotto e problemi che si possono verificare con i clienti e 
 \paragraph{Promozione del prodotto (1.8.1)}
 \begin{description}
 \item[Descrizione:] fase di promozione del prodotto realizzato. Si punta a pubblicizzare il prodotto con lo scopo di raggiungere quanti pi\`{u} clienti possibili iniziando a creare un brand.
-\item[Responsabile:] 
+\item[Responsabile:] Grafico Pubblicitario, Responsabile Customer Care
 \item[Input:] alcune conoscenze di marketing e target clienti.
 \item[Output:] slogan, pubblicità scelte di mercato da intraprendere.
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
@@ -514,7 +512,7 @@ possibili bug del prodotto e problemi che si possono verificare con i clienti e 
 \paragraph{Presentazione del prodotto (1.8.2)}
 \begin{description}
 \item[Descrizione:] il prodotto software verr\`{a} presentato in opportuni incontri con dei potenziali clienti al fine di dimostrare l'utilit\`{a} del prodotto.
-\item[Responsabile:] 
+\item[Responsabile:] Responsabile Customer Care, Project Manager
 \item[Input:] software completato.
 \item[Output:] incremento delle conoscenze del prodotto stesso e del team a possibili acquirenti e investitori. 
 \item[Attività:]\mbox{}\\[-1.5\baselineskip]
