--- a/PianoDiProgetto/sections/qualita.tex
+++ b/PianoDiProgetto/sections/qualita.tex
@@ -33,6 +33,6 @@ Gli obiettivi di qualit\`{a} andranno distinti in ogni fase del ciclo di vita de
 \subparagraph{Sviluppo}
 \begin{itemize}
 \item Il codice dell\textquoteright{}applicativo dovr\`{a} essere commentato nei punti critici;
-\item Il codice dell\textquoteright{}applicativo dovr\`{a} avere una bassa complessit\`{a} ciclomatica\footnote{todo};
-\item La compilazione del codice non dovr\`{a} fornire né errori né warnings\footnote{todo}.
+\item Il codice dell\textquoteright{}applicativo dovr\`{a} avere una bassa complessit\`{a} ciclomatica\footnote{numero di casi di prova da effettuare nella fase di verifica del codice};
+\item La compilazione del codice non dovr\`{a} fornire né errori né warnings\footnote{avvisi che indicano che parte di codice non viene utilizzato o pu\`{o} essere soggetto a errore a run time}.
 \end{itemize}
